Holding down shift while clicking Scramble now generates a pdf instead of a zip, this is useful for testing. fixes #9

--- a/css/ui.css
+++ b/css/ui.css
@@ -83,7 +83,7 @@ h1 {
   margin-top: 15px;
 }
 
-#top_interface #competitionName {
+#top_interface #competitionName,#seedInput {
   font-size: 150%;
   width: 24em;
   text-align: center;
